--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,1 +1,22 @@
-
+##缓存（开发时设置为false）
+#spring.thymeleaf.cache=true
+##开启
+#spring.devtools.restart.enabled=true
+##监听目录（可不设置）
+#spring.devtools.restart.additional-paths=src/main/java  
+#
+#spring.datasource.url=jdbc:mysql://cn668.cn:3306/blog
+#spring.datasource.username=blog
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.max-idle=10
+#spring.datasource.max-wait=10000
+#spring.datasource.min-idle=5
+#spring.datasource.initial-size=5
+#
+#server.port=80
+#server.session.timeout=10
+#server.tomcat.uri-encoding=UTF-8
+#
+#mybatis.config-location=classpath:mybatis/mybatis-config.xml
+#mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
