--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -73,6 +73,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- shiro -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
