--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -85,6 +85,16 @@
 			<version>1.2.28</version>
 		</dependency>
 
+		<!--模板引擎 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<!--web模块是一定要的 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 	</dependencies>
 
