--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,22 +1,15 @@
-##缓存（开发时设置为false）
-#spring.thymeleaf.cache=true
-##开启
-#spring.devtools.restart.enabled=true
-##监听目录（可不设置）
-#spring.devtools.restart.additional-paths=src/main/java  
-#
-#spring.datasource.url=jdbc:mysql://cn668.cn:3306/blog
-#spring.datasource.username=blog
-#spring.datasource.password=123456
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.max-idle=10
-#spring.datasource.max-wait=10000
-#spring.datasource.min-idle=5
-#spring.datasource.initial-size=5
-#
-#server.port=80
-#server.session.timeout=10
-#server.tomcat.uri-encoding=UTF-8
-#
-#mybatis.config-location=classpath:mybatis/mybatis-config.xml
-#mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
+##thymeleaf start
+##视图解析器的前缀放在这个文件夹
+#spring.thymeleaf.prefix=classpath:/templates/
+##后缀
+#spring.thymeleaf.suffix=.html
+##模式
+#spring.thymeleaf.mode=LEGACYHTML5
+#spring.thymeleaf.servlet.content-type=text/html
+##编码格式
+#spring.thymeleaf.encoding=utf-8
+##不用缓存
+#spring.thymeleaf.cache=false
+#spring.resources.chain.strategy.content.enabled=true
+#spring.resources.chain.strategy.content.paths=/**
+##thymeleaf end
